Use relative path in readme example raw input files

--- a/examples/README.md.jinja
+++ b/examples/README.md.jinja
@@ -14,7 +14,7 @@
 ```
 
 {% for file in input_files %}
-**{{ file.name }}**
+**{{ file.relative_path }}**
 ```{{ file.type }}
 {{ "{% raw %}" }}
 {{ include_file(file.path) }}
